Fixing 'header already sent' errors

--- a/README
+++ b/README
@@ -59,7 +59,7 @@ For more information, please refer to <http://unlicense.org/>
 		$mysqldatabase	- the name of the database to store the csms data
 		
 	install.php
-		$script_path	- this is where the csms.sql file is located in your filesystem
+		$script_path	- this is the absolute path to where the csms.sql file is located in your filesystem
 
 		
 2.2. Create a database on your sql server with the same name as in $mysqldatabase.
